# raytrace

./: CMakeLists.txt  LICENSE  README.md  debug_sphere.cpp  main.cpp  main_cartesian.cpp  main_plot_2d.cpp
include/raytrace/: approach_traceable.h  clifford_torus.h  gradient_traceable.h  hyper_torus.h  input_parser.h  mandelbrot.h  mandelbulb.h  power3d.h  quaternion.h  ray_traceable.h  sphere.h  trace.h
scripts/: animate.py
src/: CMakeLists.txt  approach_traceable.cpp  clifford_torus.cpp  gradient_traceable.cpp  hyper_torus.cpp  input_parser.cpp  mandelbrot.cpp  mandelbulb.cpp  power3d.cpp  quaternion.cpp  ray_traceable.cpp  sphere.cpp  trace.cpp
test/: CMakeLists.txt  test_power3d.cpp  test_quaternion.cpp  test_sphere.cpp
